fixed animations on photos and hero rotating text on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -19,7 +19,7 @@
     flex-direction: column;
     align-items: center;
     padding-top:15vh;
-    height: 75vh;
+    height: 85vh;
     color: #c1c1c1;
     font-size: 2rem;
     font-weight: 700;
